tests/ui/structs/struct-fn-in-definition.stderr
error: functions are not allowed in struct definitions
  --> $DIR/struct-fn-in-definition.rs:9:5
   |
LL | struct S {
   |        - while parsing this struct
...
LL |     fn foo() {}
   |     ^^^^^^^^^^^
   |
   = help: unlike in C++, Java, and C#, functions are declared in `impl` blocks
   = help: see https://doc.rust-lang.org/book/ch05-03-method-syntax.html for more information

error: functions are not allowed in union definitions
  --> $DIR/struct-fn-in-definition.rs:18:5
   |
LL | union U {
   |       - while parsing this union
...
LL |     fn foo() {}
   |     ^^^^^^^^^^^
   |
   = help: unlike in C++, Java, and C#, functions are declared in `impl` blocks
   = help: see https://doc.rust-lang.org/book/ch05-03-method-syntax.html for more information

error: functions are not allowed in enum definitions
  --> $DIR/struct-fn-in-definition.rs:27:5
   |
LL | enum E {
   |      - while parsing this enum
...
LL |     fn foo() {}
   |     ^^^^^^^^^^^
   |
   = help: unlike in C++, Java, and C#, functions are declared in `impl` blocks
   = help: see https://doc.rust-lang.org/book/ch05-03-method-syntax.html for more information
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`

error: aborting due to 3 previous errors

